--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,6 +24,6 @@ jobs:
        with:
         context: .
         push: true
-        tags: ghcr.io/${{github.repository_lowercase}}:latest
+        tags: ghcr.io/mayyyk/devops_playground:latest
 
      
