--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,4 +31,41 @@ jobs:
         push: true
         tags: ghcr.io/mayyyk/devops_playground:latest
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Instalujemy zależności Ansible (role i kolekcje)
+      # Musimy to zrobić, bo 'action-ansible-playbook' sam tego nie robi
+      - name: Install Ansible dependencies
+        run: |
+          ansible-galaxy collection install community.general community.docker
+          # Instalujemy rolę DOCKERA w podfolderze 'roles' wewnątrz 'ansible_project'
+          ansible-galaxy install geerlingguy.docker -p ./ansible_project/roles
+
+      - name: Run Ansible Playbook
+        uses: dawidd6/action-ansible-playbook@v2
+        with:
+          # Ścieżka do playbooka w repozytorium
+          playbook: configure-server.yml
+          
+          # Katalog roboczy, w którym znajdują się wszystkie pliki Ansible
+          directory: ./ansible_project 
+          
+          # Klucz SSH do logowania na serwer (z GitHub Secrets)
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          
+          # Hasło do sejfu Ansible (z GitHub Secrets)
+          vault_password: ${{ secrets.ANSIBLE_VAULT_PASS }}
+          
+          # Przekazujemy adres IP i użytkownika dynamicznie
+          # To zastępuje użycie pliku 'inventory.ini'
+          inventory: |
+            [web]
+            ${{ secrets.SERVER_IP }} ansible_user=root
      
