--- a/ansible_project/configure-server.yml
+++ b/ansible_project/configure-server.yml
@@ -33,6 +33,8 @@
       vars:
         docker_users: [ "root" ] # Dodajemy 'root' do grupy docker
 
+    - name: geerlingguy.node_exporter
+
   tasks:
     - name: Configure UFW firewall
       community.general.ufw:
@@ -43,6 +45,7 @@
         - "22"   # SSH (Krytyczne!)
         - "80"   # HTTP (Na przyszłość, gdy dodasz np. Nginx)
         - "5000" # Twoja aplikacja Flask
+        - "9100" # Node exporter
 
     - name: Enable UFW firewall
       community.general.ufw:
