--- a/ansible_project/inventory.ini
+++ b/ansible_project/inventory.ini
@@ -1,3 +1,9 @@
-[web]
+# file format for ansible inventory - for terraform use
 
-207.154.193.117 ansible_user=root
+[webserver]
+
+206.189.60.185 ansible_user=root
+134.209.247.92 ansible_user=root
+64.226.125.192 ansible_user=root
+206.189.50.130 ansible_user=root
+
