--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,11 +1,13 @@
-name: Build and Push Docker Image
+name: CI/CD Pipeline - Build and Deploy
 
 on:
   push:
     branches: [master, main]
+  workflow_dispatch: # Option to run manually from GitHub UI Actions tab
 
 jobs:
-  build-and-push:
+  build:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
     permissions:
@@ -17,55 +19,58 @@ jobs:
      - name: check out code
        uses: actions/checkout@v4
 
-     - name: Log in to GitHub Container 
+     - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }} # automatically created by github actions
 
      - name: Build and push docker Image
-       uses: docker/build-push-action@v5
+       uses: docker/build-push-action@v6
        with:
-        context: .
+        context: src
         push: true
         tags: ghcr.io/mayyyk/devops_playground:latest
 
   deploy:
+    name: Deploy to DigitalOcean Server using Ansible
     runs-on: ubuntu-latest
-    needs: build-and-push
-
+    needs: build
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Instalujemy zależności Ansible (role i kolekcje)
-      # Musimy to zrobić, bo 'action-ansible-playbook' sam tego nie robi
-      - name: Install Ansible dependencies
-        run: |
-          ansible-galaxy collection install community.general community.docker
-          ansible-galaxy install geerlingguy.docker -p ./ansible_project/roles
-          ansible-galaxy install geerlingguy.node_exporter -p ./ansible_project/roles
+      - name: Create Inventory File # inventory.ini in ansible_project exists only locally, so we need to create it in the actions runner
+        run: echo "${{ secrets.INVENTORY}}" > inventory.ini # create in root directory of the actions runner
+        # Automatic generation of inventory possible when tf state file is remotely hosted
+        shell: bash
+
+      - name: Create Known Hosts File
+        run: echo "${{ secrets.KNOWN_HOSTS}}" > my_known_hosts # create known_hosts file in root directory of the actions runner
+        shell: bash
+
+      - name: Set up SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+        
+        # No need to install Ansible dependencies, I stick to basic modules only available in default ansible installation
 
       - name: Run Ansible Playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
           # Ścieżka do playbooka w repozytorium
-          playbook: configure-server.yml
+          playbook: playbook.yml
           
-          # Katalog roboczy, w którym znajdują się wszystkie pliki Ansible
-          directory: ./ansible_project 
+          directory: ansible_project # go to this directory
           
-          # Klucz SSH do logowania na serwer (z GitHub Secrets)
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          
-          # Hasło do sejfu Ansible (z GitHub Secrets)
-          vault_password: ${{ secrets.ANSIBLE_VAULT_PASS }}
           
           # Przekazujemy adres IP i użytkownika dynamicznie
           # To zastępuje użycie pliku 'inventory.ini'
-          inventory: |
-            [web]
-            ${{ secrets.SERVER_IP }} ansible_user=root
+          inventory: ../inventory.ini # inventory file in the runner
+
+          options: ---extra-vars "ansible_ssh_common_args='-o UserKnownHostsFile=../my_known_hosts'"
      
