added INVENTORY debugging in workflow file

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -63,6 +63,15 @@ jobs:
           cat ansible_project/.ansible_inventory
           echo "--- End: Content of ansible_project/.ansible_inventory ---"
         shell: bash
+
+      - name: Debug Known Hosts File
+        # This step will print the content of the inventory file to the log
+        # so we can see if the secret is being loaded correctly.
+        run: |
+          echo "--- Start: Content of my_known_hosts ---"
+          cat my_known_hosts
+          echo "--- End: Content of my_known_hosts ---"
+        shell: bash
         
         # No need to install Ansible dependencies, I stick to basic modules only available in default ansible installation
 
