secrets lenght check

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -55,22 +55,14 @@ jobs:
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Debug Inventory File
-        # This step will print the content of the inventory file to the log
-        # so we can see if the secret is being loaded correctly.
+          
+      - name: Debug Secrets (Check Length)
+        # This step will print the length of the secrets.
+        # If length is 0, the secret is empty.
         run: |
-          echo "--- Start: Content of ansible_project/.ansible_inventory ---"
-          cat ansible_project/.ansible_inventory
-          echo "--- End: Content of ansible_project/.ansible_inventory ---"
-        shell: bash
-
-      - name: Debug Known Hosts File
-        # This step will print the content of the inventory file to the log
-        # so we can see if the secret is being loaded correctly.
-        run: |
-          echo "--- Start: Content of my_known_hosts ---"
-          cat my_known_hosts
-          echo "--- End: Content of my_known_hosts ---"
+          echo "Inventory length: ${{ length(secrets.INVENTORY) }}"
+          echo "Known Hosts length: ${{ length(secrets.KNOWN_HOSTS) }}"
+          echo "SSH Key length: ${{ length(secrets.SSH_PRIVATE_KEY) }}"
         shell: bash
         
         # No need to install Ansible dependencies, I stick to basic modules only available in default ansible installation
