--- a/ansible_project/inventory.ini
+++ b/ansible_project/inventory.ini
@@ -1,7 +1,6 @@
 # file format for ansible inventory - for terraform use
-
+# Be careful with formatting when setting secret.INVENTORY in GitHub Actions
 [webserver]
-
 165.232.127.200 ansible_user=root
 68.183.212.208 ansible_user=root
 159.89.111.83 ansible_user=root
