--- a/ansible_project/playbook.yml
+++ b/ansible_project/playbook.yml
@@ -58,6 +58,7 @@
         name: hello-world-app
         image: "ghcr.io/mayyyk/devops_playground:latest"
         state: started
+        public: yes # Forces docker to pull lates version from registry
         restart_policy: always
         ports:
           - "5000:5000"
