--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ __pycache__/
 # OS-specific files
 .DS_Store
 Thumbs.db
+
+# Host info
+ansible_project/known_hosts.txt
+ansible_project/inventory.ini
