--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -55,12 +55,20 @@ jobs:
         with:
           terraform_version: 1.2.5
 
+      - name: Create Terraform Cloud credentials file
+        run: |
+          mkdir -p ~/.terraform.d
+          echo "{\"credentials\": {\"app.terraform.io\": {\"token\": \"${{ secrets.TFC_TOKEN }}\"}}}" > ~/.terraform.d/credentials.tfrc.json
+        working-directory: ./terraform_project
+        shell: bash
+
       - name: Terraform Init
         id: init
         run: terraform init
         working-directory: ./terraform_project
         env:
           TF_VAR_do_token: ${{ secrets.DO_TOKEN }}
+          TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
 
       - name: Terraform Apply
         id: apply
@@ -68,6 +76,7 @@ jobs:
         working-directory: ./terraform_project
         env:
           TF_VAR_do_token: ${{ secrets.DO_TOKEN }}
+          TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
 
       - name: Set up SSH key
         uses: webfactory/ssh-agent@v0.9.0
